src/objects/SRP_IntakeAssessments__c.object
<CustomObject>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Former Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aggravating_Factors_Description__c</fullName>
        <description>Text to be included if Aggravating Factors is Yes. Must be filled in if Yes.</description>
        <label>Aggravating Factors Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aggravating_Factors__c</fullName>
        <description>Needed to calculate supervision level</description>
        <label>Aggravating Factors</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apt_No__c</fullName>
        <label>Apt. No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipLabel>SRP IntakeAssessments</relationshipLabel>
        <relationshipName>SRP_IntakeAssessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Building_No__c</fullName>
        <label>Building No.</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caregiver_Referrals__c</fullName>
        <inlineHelpText>If caregiver, need referrals or resources?</inlineHelpText>
        <label>Need caregiver referrals?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Worker_Address__c</fullName>
        <label>Case Worker address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Worker_Agency__c</fullName>
        <label>Case Worker Agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Worker_Phone__c</fullName>
        <label>Case worker phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Worker__c</fullName>
        <label>Case Worker</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Head of Household Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cigarettes_How_Many__c</fullName>
        <label>How many:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City Text</label>
        <picklist>
            <picklistValues>
                <fullName>Bronx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chestnut Ridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deer Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jersey City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mount Vernon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Bergen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staten Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yonkers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Head of Household</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Work_Phone__c</fullName>
        <label>Head of Household Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Current_Medical_Care_Provider_YN__c</fullName>
        <label>Current Medical Care Provider YN</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, I just go to the ER.</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_School_Enrollment__c</fullName>
        <inlineHelpText>Are you currently enrolled in school? Where and what level?</inlineHelpText>
        <label>Current school enrollment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Currently_seeing_psych__c</fullName>
        <description>Are you currently seeing a psychiatrist?</description>
        <label>Currently seening a psychiatrist</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currently_seeing_therapist__c</fullName>
        <description>Are you currently seeing a therapist?</description>
        <label>Currently seening a therapist</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cutting_down__c</fullName>
        <description>Interested in cutting down?</description>
        <label>Interested in cutting down?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ed_continue_studies__c</fullName>
        <description>Would you like to continue studies?</description>
        <label>Like to continue studies?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ed_currently_enrolled__c</fullName>
        <description>Currently enrolled in school?</description>
        <label>Currently enrolled in school?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ed_vocational_training__c</fullName>
        <description>Interested in vocational/technical training?</description>
        <label>Vocational/Technical training?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Educational_Goals__c</fullName>
        <inlineHelpText>If continuing studies, what are your educational goals?</inlineHelpText>
        <label>Educational Goals</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Head of Household Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employment_Goals__c</fullName>
        <inlineHelpText>What are your employment goals?</inlineHelpText>
        <label>Employment Goals</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Food_Stamps_Amount__c</fullName>
        <label>Food Stamps (Amount)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_Stamps_YN__c</fullName>
        <label>Food Stamps</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Food_stamps__c</fullName>
        <description>Food stamps?</description>
        <label>SNAP/WIC/EBT/Food Stamps?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Half_Fare_Metrocard__c</fullName>
        <label>Half-Fare Metrocard</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know if eligible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hangout_Place__c</fullName>
        <description>If no address, place where hangs out</description>
        <label>Hangout Place</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Have_OBGYN__c</fullName>
        <label>Have OBGYN</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_case_worker__c</fullName>
        <description>Do you have a case worker?</description>
        <label>Do you have case worker?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_Insurance__c</fullName>
        <description>Populated by contents of Insurance Type field from Program Relationships</description>
        <label>Health Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Health_home_care_coordinator__c</fullName>
        <description>Need a health home care coordinator?</description>
        <label>Need health home care coordinator?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Highest_Level_of_Education__c</fullName>
        <label>Highest Level of Education</label>
        <picklist>
            <picklistValues>
                <fullName>No schooling completed, or less than 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursery, Kindergarten and Elementary (Grades 1-8)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School (Grades 9-12, no degree)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School graduate or equivalent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some college (1-4 years, no degree)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelor&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master&apos;s Degree (MA, MS, MENG, MSW, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional School degree (MD, DDC, JD, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctorate degree (PhD, EdD, etc.)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hospitalized_Details__c</fullName>
        <inlineHelpText>Have you ever been hospitalized?</inlineHelpText>
        <label>Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_safe_do_you_feel__c</fullName>
        <inlineHelpText>How save do you feel currently?</inlineHelpText>
        <label>How safe do you feel?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hurt_Others_What_you_do__c</fullName>
        <inlineHelpText>What did you do?</inlineHelpText>
        <label>What did you do?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hurt_Others_happening_now__c</fullName>
        <inlineHelpText>Is any of that still happening now?</inlineHelpText>
        <label>Still happening now?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hurt_Self_What_going_on__c</fullName>
        <inlineHelpText>What was going on at that time?</inlineHelpText>
        <label>What was going on?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hurt_Self_What_you_do__c</fullName>
        <inlineHelpText>What did you do?</inlineHelpText>
        <label>What did you do?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hurt_Self__c</fullName>
        <description>Thought about hurting self?</description>
        <label>Thoughts of hurting self</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hurt_Self_happening_now__c</fullName>
        <inlineHelpText>Is any of that still happening now?</inlineHelpText>
        <label>Still happening now?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hurt_others_What_going_on__c</fullName>
        <inlineHelpText>What was going on at that time?</inlineHelpText>
        <label>What was going on?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hurt_others__c</fullName>
        <description>Thought about hurting others?</description>
        <label>Thoughts of hurting others</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hurt_others_when__c</fullName>
        <inlineHelpText>When was that?</inlineHelpText>
        <label>When was that?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hurt_self_when__c</fullName>
        <inlineHelpText>When was that?</inlineHelpText>
        <label>When was that?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Immediate_Needs__c</fullName>
        <label>Immediate Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immigration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment/Vocational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mediation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victim Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical/Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Consolidation/Money Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID/Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parenting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing/Hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Care Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Caretaker Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-Fare Metrocard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Income_Family__c</fullName>
        <label>Income - Family Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_None__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Income - None</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_Other__c</fullName>
        <label>Income - Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_PA_CASH__c</fullName>
        <label>Income - PA CASH</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Pension__c</fullName>
        <label>Income - Pension</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_SSD__c</fullName>
        <label>Income - SSD</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_SSI__c</fullName>
        <label>Income - SSI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Veteran_Benefits__c</fullName>
        <label>Income - Veteran&apos;s Benefits</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Wages__c</fullName>
        <label>Income - Wages</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Number__c</fullName>
        <label>Insurance Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Pap_Smear__c</fullName>
        <label>Last Pap Smear</label>
        <picklist>
            <picklistValues>
                <fullName>Last 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In the last year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Physical_Exam__c</fullName>
        <label>Last Physical Exam</label>
        <picklist>
            <picklistValues>
                <fullName>Last 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In the last year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than a year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Social_Support__c</fullName>
        <description>How is your level of social support right now</description>
        <label>Level of social support</label>
        <picklist>
            <picklistValues>
                <fullName>I have the social support I need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I wish I had more social support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I don&apos;t have any social support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MH_Ever_Hospitalized__c</fullName>
        <description>Mental Health - ever hospitalized?</description>
        <label>Ever hospitalized?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MH_Hospitalization_Details__c</fullName>
        <label>MH Hospitalization Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicaid_Sequence_Number__c</fullName>
        <label>Medicaid Sequence Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Issues__c</fullName>
        <label>Medical Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV/AIDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood pressure issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatitis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epilepsy/Seizure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Medications_Dosage__c</fullName>
        <inlineHelpText>Medications and Dosage</inlineHelpText>
        <label>Medications and Dosage</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Meds__c</fullName>
        <label>Mental Health Meds (Name &amp; Dosage)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_Helpful_Needs__c</fullName>
        <inlineHelpText>Most helpful to avoid rearrest?</inlineHelpText>
        <label>Most helpful to avoid rearrest</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_Important_Needs__c</fullName>
        <inlineHelpText>Most important needs to work on?</inlineHelpText>
        <label>Most important needs to work on</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Need_Medical_Referrals_Txt__c</fullName>
        <label>Need Medical Referrals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_medical_referrals__c</fullName>
        <description>Need medical referrals ( eye, hearing, etc.)?</description>
        <label>Need medical referral?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OBGYN_Address__c</fullName>
        <label>OBGYN address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OBGYN_Clinic__c</fullName>
        <label>OB GYN Clinic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OBGYN_Phone__c</fullName>
        <label>OBGYN phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_legal_issues__c</fullName>
        <inlineHelpText>Do you have reliable access to clean clothing?</inlineHelpText>
        <label>Are there other legal issues?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_medical_issues__c</fullName>
        <description>If yes to Medical Issues - Other</description>
        <label>Other medical issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCP_Clinic__c</fullName>
        <label>Primary Care Clinic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Address__c</fullName>
        <label>Physician address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Phone__c</fullName>
        <label>Physician phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Care_Physician__c</fullName>
        <label>Primary Care Physician</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Address__c</fullName>
        <label>Primary Contact Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Name__c</fullName>
        <label>Primary Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <label>Primary Contact Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Relationship__c</fullName>
        <label>Primary Contact Relationship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_caregiver__c</fullName>
        <description>Are you a primary caregiver?</description>
        <label>Primary caregiver?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Psy_Diagnosis_Other__c</fullName>
        <description>If answered &quot;other&quot; on Psych Diag picklist</description>
        <label>Psych Diagnosis (Other)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psychiatric_Diagnosis_Information__c</fullName>
        <label>Psychiatric Diagnosis Information</label>
        <picklist>
            <picklistValues>
                <fullName>Schizophrenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anxiety Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schizoaffective Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsessive-Compulsive Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Polar Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Traumatic Stress Disorder (PTSD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Depression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other learning disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Psychiatrist_Address__c</fullName>
        <label>Psychiatrist address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psychiatrist_Agency__c</fullName>
        <label>Psychiatrist Agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psychiatrist_Phone__c</fullName>
        <label>Psyciatrist phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>